--- a/codeables/package.json
+++ b/codeables/package.json
@@ -7,8 +7,12 @@
     "doc": "docs",
     "test": "test"
   },
+  "engines": {
+    "node": "6.7.0",
+    "npm": "3.10.7"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "postinstall": "./node_modules/.bin/webpack"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +22,7 @@
     "babel-loader": "^6.3.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
+    "lodash.merge": "^4.6.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
