made user models migration

--- a/test/fixtures/instructions.yml
+++ b/test/fixtures/instructions.yml
@@ -1,3 +1,16 @@
+# == Schema Information
+#
+# Table name: instructions
+#
+#  id          :integer          not null, primary key
+#  step_title  :string           not null
+#  step_detail :string           not null
+#  media_url   :string
+#  project_id  :integer          not null
+#  created_at  :datetime         not null
+#  updated_at  :datetime         not null
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 # This model initially had no columns defined. If you add columns to the
