--- a/test/fixtures/instructions.yml
+++ b/test/fixtures/instructions.yml
@@ -2,13 +2,16 @@
 #
 # Table name: instructions
 #
-#  id          :integer          not null, primary key
-#  step_title  :string           not null
-#  step_detail :string           not null
-#  media_url   :string
-#  project_id  :integer          not null
-#  created_at  :datetime         not null
-#  updated_at  :datetime         not null
+#  id                 :integer          not null, primary key
+#  step_title         :string           not null
+#  step_detail        :string           not null
+#  project_id         :integer          not null
+#  created_at         :datetime         not null
+#  updated_at         :datetime         not null
+#  media_file_name    :string
+#  media_content_type :string
+#  media_file_size    :integer
+#  media_updated_at   :datetime
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
