--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "babel-loader": "^6.3.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
+    "html-loader": "^0.4.5",
     "lodash.merge": "^4.6.0",
+    "quill": "^1.2.2",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-modal": "^1.6.5",
