--- a/test/fixtures/projects.yml
+++ b/test/fixtures/projects.yml
@@ -12,6 +12,7 @@
 #  cover_img_content_type :string
 #  cover_img_file_size    :integer
 #  cover_img_updated_at   :datetime
+#  publish                :boolean          default("false")
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
