--- a/test/fixtures/media.yml
+++ b/test/fixtures/media.yml
@@ -2,12 +2,16 @@
 #
 # Table name: media
 #
-#  id            :integer          not null, primary key
-#  mediable_type :string
-#  mediable_id   :integer
-#  user_id       :integer          not null
-#  created_at    :datetime         not null
-#  updated_at    :datetime         not null
+#  id                 :integer          not null, primary key
+#  mediable_type      :string
+#  mediable_id        :integer
+#  user_id            :integer          not null
+#  created_at         :datetime         not null
+#  updated_at         :datetime         not null
+#  media_file_name    :string
+#  media_content_type :string
+#  media_file_size    :integer
+#  media_updated_at   :datetime
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
